# ppvss-evoting

./: .gitignore  Cargo.toml  LICENSE  README.md
evoting_pi_s_ppvss/: Cargo.toml  benches.txt
evoting_pi_s_ppvss/benches/: bench.rs
evoting_pi_s_ppvss/src/: bulletin_board.rs  lib.rs  main.rs  tallier.rs  voter.rs
evoting_schoenmakers/: Cargo.toml  benches.txt
evoting_schoenmakers/benches/: bench.rs
evoting_schoenmakers/src/: bulletin_board.rs  lib.rs  main.rs  tallier.rs  voter.rs
pi_s_ppvss/: Cargo.toml
pi_s_ppvss/benches/: bench.rs
pi_s_ppvss/src/: dealer.rs  lib.rs  main.rs  party.rs  polynomial.rs  utils.rs
pi_s_pvss/: Cargo.toml  alfred_bench.txt
pi_s_pvss/benches/: bench.rs
pi_s_pvss/src/: dealer.rs  lib.rs  main.rs  party.rs  polynomial.rs  utils.rs
schoenmakers/: Cargo.toml  benches.txt
schoenmakers/benches/: bench.rs
schoenmakers/src/: dealer.rs  lib.rs  main.rs  party.rs  polynomial.rs  utils.rs
