[package]
name = "evoting_pi_s_ppvss"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}


[dependencies]
curve25519-dalek = {workspace = true}
rand = {workspace = true}
rand_chacha = {workspace = true}
rayon = {workspace = true}
zeroize = {workspace = true}
pi_s_ppvss = {path = "../pi_s_ppvss"}

[target.'cfg(all(target_arch = "aarch64"))'.dependencies]
blake3 = {version = "1.8.2", features = ["neon", "rayon", "zeroize", "traits-preview"]}
[target.'cfg(all(target_arch = "x86_64"))'.dependencies]
blake3 = {version = "1.8.2", features = ["rayon", "zeroize", "traits-preview"]}

[dev-dependencies]
criterion = {workspace = true}

[[bench]]
name = "bench"
harness = false
